se cambio un dato

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <span class="badge badge-warning"> Javascript</span>
                     <span class="badge badge-info"> React</span>
                   </div>
-                  <h5 class="card-title mb-0">Sacha Romero</h5>
+                  <h5 class="card-title mb-0">Speaker seleccionado</h5>
                   <p class="card-text">Cras luctus diam quis justo bibendum blandit. Nunc quam sem, maximus varius porta nec, elementum id purus. </p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -109,7 +109,7 @@
                     <span class="badge badge-warning"> Javascript</span>
                     <span class="badge badge-info"> React</span>
                   </div>
-                  <h5 class="card-title mb-0">Sacha Romero</h5>
+                  <h5 class="card-title mb-0">Speaker seleccionado</h5>
                   <p class="card-text">Cras luctus diam quis justo bibendum blandit. Nunc quam sem, maximus varius porta nec, elementum id purus. </p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -123,7 +123,7 @@
                     <span class="badge badge-warning"> Javascript</span>
                     <span class="badge badge-info"> React</span>
                   </div>
-                  <h5 class="card-title mb-0">Sacha Romero</h5>
+                  <h5 class="card-title mb-0">Speaker seleccionado</h5>
                   <p class="card-text">Cras luctus diam quis justo bibendum blandit. Nunc quam sem, maximus varius porta nec, elementum id purus. </p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -137,7 +137,7 @@
                     <span class="badge badge-warning"> Javascript</span>
                     <span class="badge badge-react"> React</span>
                   </div>
-                  <h5 class="card-title mb-0">Sacha Romero</h5>
+                  <h5 class="card-title mb-0">Speaker seleccionado</h5>
                   <p class="card-text">Cras luctus diam quis justo bibendum blandit. Nunc quam sem, maximus varius porta nec, elementum id purus. </p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
