--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body data-spy ="scroll" data-target=".nav-item"  data-offset=1 > 
   
 <!--header-->
-<nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container">
     
     <a class="navbar-brand" href="#"><img src="images/logo_platzi.webp" alt="">Conf Hawaii</a>
