--- a/retos.html
+++ b/retos.html
@@ -21,6 +21,12 @@
         border: 1px solid white;
 
       }
+
+      .rt4{
+        background-color: red;
+        border: 1px solid white;
+
+      }
     </style>
     
     <title>Desafio Bootstrap</title>
@@ -85,6 +91,14 @@
        <div class="py-7 col-8 col-md-8 offset-md-2 rt3">2</div>
        <div class="py-7 col-3 offset-9 offset-md-0 rt3">3</div>
      </div>
+
+     <div class="container 4">
+ 		 <div class="row">
+    			<div class="col-6 pull-2 rt4">
+      				Contenido
+    			</div>
+  		</div>
+	</div>```
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
